--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -4,4 +4,4 @@ RUN apt install default-jdk -y
 RUN apt install tomcat9 -y
 RUN apt install maven -y
 RUN apt install git -y
-RUN apt install docker.io
+RUN apt install docker.io -y
