--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -5,3 +5,4 @@ RUN apt install maven -y
 RUN apt install git -y
 RUN apt install docker.io -y
 COPY config.json /.docker/config.json
+RUN chmod 777 /.docker/config.json
